syntax = "proto3";

package producto;

service ProductoService {
    // CRUD Methods
    rpc CrearProducto(CrearProductoRequest) returns (ProductoResponse);
    rpc ModificarProducto(ModificarProductoRequest) returns (ProductoResponse);
    rpc BorrarProducto(BorrarProductoRequest) returns (ProductoResponse);
    rpc BuscarProducto(BuscarProductoRequest) returns (ProductoResponse);
    rpc EnlistarProductos(EnlistarProductosRequest) returns (ProductosResponse);
}

message Producto {
    int32 id_producto = 1;
    string codigo = 2;
    string nombre = 3; // Agregado: Nombre del producto
    string talle = 4;
    string foto = 5;
    string color = 6;
    int32 stock = 7;
    int32 id_tienda = 8; // Agregado: ID de la tienda a la que pertenece el producto
}

message CrearProductoRequest {
    string codigo = 1;
    string nombre = 2; // Agregado: Nombre del producto
    string talle = 3;
    string foto = 4;
    string color = 5;
    int32 stock = 6;
    int32 id_tienda = 7; // Agregado: ID de la tienda al crear el producto
}

message ModificarProductoRequest {
    int32 id_producto = 1;
    string codigo = 2;
    string nombre = 3; // Agregado: Nombre del producto
    string talle = 4;
    string foto = 5;
    string color = 6;
    int32 stock = 7;
    int32 id_tienda = 8; // Agregado: ID de la tienda al modificar el producto
}

message BorrarProductoRequest {
    int32 id_producto = 1;
}

message BuscarProductoRequest {
    string nombre = 1; // Cambiado: b√∫squeda por nombre en lugar de id_producto
}

message EnlistarProductosRequest {}

message ProductoResponse {
    Producto producto = 1;
}

message ProductosResponse {
    repeated Producto productos = 1;
}
